[DMG-323] Reduce new_user template parameters

--- a/cookbooks/cicd_infrastructure/templates/default/openldap/new_user.ldif.erb
+++ b/cookbooks/cicd_infrastructure/templates/default/openldap/new_user.ldif.erb
@@ -1,16 +1,7 @@
 dn: uid=<%= @username %>,ou=people,<%= @basedn %>
+objectClass: inetOrgPerson
 uid: <%= @username %>
-cn: <%= @username %> <%= @username %>
-objectClass: account
-objectClass: posixAccount
-objectClass: top
-objectClass: shadowAccount
+displayName: <%= @username %>
+cn: <%= @username %>
+sn: <%= @username %>
 userPassword: <%= @password %>
-shadowLastChange: 15140
-shadowMin: 0
-shadowMax: 99999
-shadowWarning: 7
-loginShell: /bin/bash
-uidNumber: 1000
-gidNumber: 1000
-homeDirectory: /home/<%= @username %>
