[DMG-350] Add "developers" group to openldap default setup
Add group "developers" to initial ldap scheme with root user as a first member.
Add group parameter to new users map

--- a/cookbooks/cicd_infrastructure/templates/default/openldap/new_user.ldif.erb
+++ b/cookbooks/cicd_infrastructure/templates/default/openldap/new_user.ldif.erb
@@ -5,3 +5,8 @@ displayName: <%= @username %>
 cn: <%= @username %>
 sn: <%= @username %>
 userPassword: <%= @password %>
+
+dn: cn=<%= @group %>,ou=groups,<%= @basedn %>
+changetype: modify
+add: member
+member: uid=<%= @username %>,ou=people,<%= @basedn %>
