--- a/cookbooks/cicd_infrastructure/templates/default/jenkins/config.xml.erb
+++ b/cookbooks/cicd_infrastructure/templates/default/jenkins/config.xml.erb
@@ -49,19 +49,5 @@
   <slaveAgentPort>0</slaveAgentPort>
   <label></label>
   <nodeProperties/>
-  <globalNodeProperties>
-    <hudson.slaves.EnvironmentVariablesNodeProperty>
-      <envVars serialization="custom">
-        <unserializable-parents/>
-        <tree-map>
-          <default>
-            <comparator class="hudson.util.CaseInsensitiveComparator"/>
-          </default>
-          <int>1</int>
-          <string>test</string>
-          <string>test</string>
-        </tree-map>
-      </envVars>
-    </hudson.slaves.EnvironmentVariablesNodeProperty>
-  </globalNodeProperties>
+  <globalNodeProperties/>
 </hudson>
