--- a/cookbooks/cicd_infrastructure/templates/default/jenkins/config.xml.erb
+++ b/cookbooks/cicd_infrastructure/templates/default/jenkins/config.xml.erb
@@ -11,7 +11,13 @@
 	<projectNamingStrategy class='jenkins.model.ProjectNamingStrategy$DefaultProjectNamingStrategy'/>
 	<workspaceDir>${JENKINS_HOME}/workspace/${ITEM_FULLNAME}</workspaceDir>
 	<buildsDir>${ITEM_ROOTDIR}/builds</buildsDir>
-	<jdks/>
+  <jdks>
+    <jdk>
+      <name>Default</name>
+      <home>/usr/lib/jvm/java</home>
+      <properties/>
+    </jdk>
+  </jdks>
 	<viewsTabBar class='hudson.views.DefaultViewsTabBar'/>
 	<myViewsTabBar class='hudson.views.DefaultMyViewsTabBar'/>
 	<clouds/>
@@ -32,3 +38,4 @@
 	<nodeProperties/>
 	<globalNodeProperties/>
 </hudson>
+
