--- a/cookbooks/cicd_infrastructure/templates/default/jenkins/config.xml.erb
+++ b/cookbooks/cicd_infrastructure/templates/default/jenkins/config.xml.erb
@@ -1,53 +1,34 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <hudson>
-  <disabledAdministrativeMonitors/>
-  <version>1.554.1</version>
-  <numExecutors>2</numExecutors>
-  <mode>NORMAL</mode>
-  <useSecurity>true</useSecurity>
-  <authorizationStrategy class="hudson.security.FullControlOnceLoggedInAuthorizationStrategy"/>
-  <% if @auth == 'LDAP' %>
-  <securityRealm class="hudson.security.LDAPSecurityRealm" plugin="ldap@1.6">
-    <server>ldap://<%= @server %>:<%= @port %></server>
-    <rootDN><%= @basedn %></rootDN>
-    <inhibitInferRootDN>false</inhibitInferRootDN>
-    <userSearchBase><%= @userdn %></userSearchBase>
-    <userSearch><%= @user_id %></userSearch>
-    <managerDN><%= @rootdn %></managerDN>
-    <managerPassword><%= @root_pwd %></managerPassword>
-    <disableMailAddressResolver>false</disableMailAddressResolver>
-  </securityRealm>
-  <% end %>
-  <disableRememberMe>false</disableRememberMe>
-  <projectNamingStrategy class="jenkins.model.ProjectNamingStrategy$DefaultProjectNamingStrategy"/>
-  <workspaceDir>${ITEM_ROOTDIR}/workspace</workspaceDir>
-  <buildsDir>${ITEM_ROOTDIR}/builds</buildsDir>
-  <markupFormatter class="hudson.markup.EscapedMarkupFormatter"/>
-  <jdks>
-    <jdk>
-      <name>Default</name>
-      <home>/System/Library/Frameworks/JavaVM.framework/Home/</home>
-      <properties/>
-    </jdk>
-  </jdks>
-  <viewsTabBar class="hudson.views.DefaultViewsTabBar"/>
-  <myViewsTabBar class="hudson.views.DefaultMyViewsTabBar"/>
-  <clouds/>
-  <slaves/>
-  <quietPeriod>5</quietPeriod>
-  <scmCheckoutRetryCount>0</scmCheckoutRetryCount>
-  <views>
-    <hudson.model.AllView>
-      <owner class="hudson" reference="../../.."/>
-      <name>All</name>
-      <filterExecutors>false</filterExecutors>
-      <filterQueue>false</filterQueue>
-      <properties class="hudson.model.View$PropertyList"/>
-    </hudson.model.AllView>
-  </views>
-  <primaryView>All</primaryView>
-  <slaveAgentPort>0</slaveAgentPort>
-  <label></label>
-  <nodeProperties/>
-  <globalNodeProperties/>
+	<disabledAdministrativeMonitors/>
+	<version>1.0</version>
+	<numExecutors>2</numExecutors>
+	<mode>NORMAL</mode>
+	<useSecurity>true</useSecurity>
+	<authorizationStrategy class='hudson.security.AuthorizationStrategy$Unsecured'/>
+	<securityRealm class='hudson.security.SecurityRealm$None'/>
+	<disableRememberMe>false</disableRememberMe>
+	<projectNamingStrategy class='jenkins.model.ProjectNamingStrategy$DefaultProjectNamingStrategy'/>
+	<workspaceDir>${JENKINS_HOME}/workspace/${ITEM_FULLNAME}</workspaceDir>
+	<buildsDir>${ITEM_ROOTDIR}/builds</buildsDir>
+	<jdks/>
+	<viewsTabBar class='hudson.views.DefaultViewsTabBar'/>
+	<myViewsTabBar class='hudson.views.DefaultMyViewsTabBar'/>
+	<clouds/>
+	<slaves/>
+	<scmCheckoutRetryCount>0</scmCheckoutRetryCount>
+	<views>
+		<hudson.model.AllView>
+			<owner class='hudson' reference='../../..'/>
+			<name>All</name>
+			<filterExecutors>false</filterExecutors>
+			<filterQueue>false</filterQueue>
+			<properties class='hudson.model.View$PropertyList'/>
+		</hudson.model.AllView>
+	</views>
+	<primaryView>All</primaryView>
+	<slaveAgentPort>0</slaveAgentPort>
+	<label/>
+	<nodeProperties/>
+	<globalNodeProperties/>
 </hudson>
