[DMG-360] Fix gerrit setup
Gerrit requires email adress for correct work with accounts, version 2.8.6 have some raise condition isssues with mysql
- Fix format of configuration files
- Add mail field for ldap users
- Disable sendmail in gerrit
- Use version 2.8.6.1

--- a/cookbooks/cicd_infrastructure/templates/default/openldap/new_user.ldif.erb
+++ b/cookbooks/cicd_infrastructure/templates/default/openldap/new_user.ldif.erb
@@ -5,6 +5,7 @@ displayName: <%= @username %>
 cn: <%= @username %>
 sn: <%= @username %>
 userPassword: <%= @password %>
+mail: <%= @username %>@localhost.com
 
 dn: cn=<%= @group %>,ou=groups,<%= @basedn %>
 changetype: modify
