[DMG-361] Add ability to deploy builds artifact into the repository

--- a/cookbooks/cicd_infrastructure/templates/default/jenkins/maven-global-settings-files.xml.erb
+++ b/cookbooks/cicd_infrastructure/templates/default/jenkins/maven-global-settings-files.xml.erb
@@ -132,7 +132,7 @@ under the License.
     &lt;/server&gt;
     --&gt;
     &lt;server&gt;
-      &lt;id&gt;nexus&lt;/id&gt;
+      &lt;id&gt;builds&lt;/id&gt;
       &lt;username&gt;<%= @nexus_username %>&lt;/username&gt;
       &lt;password&gt;<%= @nexus_password %>&lt;/password&gt;
     &lt;/server&gt;
@@ -226,7 +226,7 @@ under the License.
       &lt;id&gt;nexus-profile&lt;/id&gt;
       &lt;repositories&gt;
         &lt;repository&gt;
-          &lt;id&gt;nexus&lt;/id&gt;
+          &lt;id&gt;builds&lt;/id&gt;
           &lt;name&gt;Corp nexus&lt;/name&gt;
 	  &lt;url&gt;<%= @nexus_url %>&lt;/url&gt;
           &lt;layout&gt;default&lt;/layout&gt;
