--- a/cookbooks/cicd_infrastructure/templates/default/integration/jenkins/jobs/asf-demo-jobs.groovy.erb
+++ b/cookbooks/cicd_infrastructure/templates/default/integration/jenkins/jobs/asf-demo-jobs.groovy.erb
@@ -80,13 +80,12 @@ job(type: Maven) {
     postBuildSteps {
         maven {
             goals("""deploy:deploy-file -B
-                -DgroupId=asf-demo
-                -DartifactId=<%= @project_name %>
+                -DgroupId=org.springframework.samples
+                -DartifactId=spring-petclinic
                 -Dversion=1.0-SNAPSHOT
                 -Dpackaging=war
-                -Dfile=\${WORKSPACE}/asf-webapp-demo.war
-                -DrepositoryId=<%= @nexus_id %>
-                -Durl=<%= @nexus_url %>""")
+                -Dfile=\${WORKSPACE}/target/petclinic.war
+                -Durl=<%= @nexus_url %>build""")
             mavenInstallation("Maven 3.1.1")
 	    configure { project ->
 		    project << globalSettings(class:'org.jenkinsci.plugins.configfiles.maven.job.MvnGlobalSettingsProvider', plugin:'config-file-provider@<%= @cfg_plugin_version %>') {
