--- a/cookbooks/cicd_infrastructure/templates/default/integration/jenkins/jobs/asf-demo-jobs.groovy.erb
+++ b/cookbooks/cicd_infrastructure/templates/default/integration/jenkins/jobs/asf-demo-jobs.groovy.erb
@@ -84,6 +84,7 @@ job(type: Maven) {
                 -DartifactId=asf-webapp-demo
                 -Dversion=1.0-SNAPSHOT
                 -Dpackaging=war
+                -DrepositoryId=builds
                 -Dfile=\${WORKSPACE}/target/petclinic.war
                 -Durl=<%= @nexus_url %>/content/repositories/builds""")
             mavenInstallation("Maven-default")
