[DMG-395] Add proxy for gd_jbehave_framework-snapshots repository

--- a/cookbooks/cicd_infrastructure/templates/default/nexus/nexus.xml.erb
+++ b/cookbooks/cicd_infrastructure/templates/default/nexus/nexus.xml.erb
@@ -332,6 +332,9 @@
         </memberRepositories>
       </externalConfiguration>
     </repository>
+    <% if @use_jbehave_proxy == 'true' %>
+        <%= render 'nexus/jbehave_proxy.xml.erb' %>
+    <% end %>
   </repositories>
   <repositoryGrouping>
     <pathMappings>
